# streamdeck-ui

./: .coveragerc  .cruft.json  .gitignore  .markdownlint.yml  .releaserc  .travis.yml  404.html  CHANGELOG.md  README-de.md  README.md  coverage.xml  index.html  mkdocs.yml  obs-websocket.py  pyproject.toml  run.sh  setup.cfg  setup.sh  sitemap.xml
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  bug_report.md  bug_report.yml  config.yml  feature_request.md
.github/workflows/: docs.yml  release.yaml  test-docs.yml  test.yaml  test.yml
CHANGELOG/: index.html
README-de/: index.html
docs/: centos.md  index.md  troubleshooting.md  ubuntu1804.md
docs/art/: logo_large.xcf
docs/centos/: index.html
docs/contributing/: 1.-contributing-guide.md  3.-code-of-conduct.md  4.-acknowledgements.md  acknowledgements.md  code-of-conduct.md  coding-standard.md  contributing-guide.md
docs/contributing/1.-contributing-guide/: index.html
docs/contributing/2.-coding-standard/: index.html
docs/contributing/3.-code-of-conduct/: index.html
docs/contributing/4.-acknowledgements/: index.html
docs/installation/: arch.md  centos.md  fedora.md  nixos.md  opensuse.md  source.md  systemd.md  ubuntu.md  ubuntu1804.md
docs/installation/arch/: index.html
docs/installation/centos/: index.html
docs/installation/fedora/: index.html
docs/installation/opensuse/: index.html
docs/installation/systemd/: index.html
docs/installation/ubuntu/: index.html
docs/installation/ubuntu1804/: index.html
docs/troubleshooting/: index.html
docs/ubuntu1804/: index.html
notebooks/: device_information.ipynb
notebooks/.ipynb_checkpoints/: device_information-checkpoint.ipynb
plugin-examples/: plugin_structure.json
plugin-examples/audio-switch-plugin/: audio-switch-plugin.sh
reference/streamdeck_ui/: index.html
reference/streamdeck_ui/api/: index.html
reference/streamdeck_ui/config/: index.html
reference/streamdeck_ui/gui/: index.html
reference/streamdeck_ui/resources_rc/: index.html
reference/streamdeck_ui/ui_main/: index.html
scripts/: clean.sh  compile_ui.sh  fedora_install.sh  lint.sh  restart_streamdeck_wakeup.sh  streamdeck.service  test.sh  ubuntu_install.sh
search/: search_index.json
streamdeck_ui/: __init__.py  __main__.py  api.py  button.ui  config.py  dimmer.py  fonts.py  gui.py  logger.py  main.ui  mock_streamdeck.py  model.py  plugin.py  resources.qrc  resources_rc.py  semaphore.py  settings.ui  stream_deck_monitor.py  system_api.py  ui_button.py  ui_main.py  ui_settings.py  ui_wizard.py  wizard.ui
streamdeck_ui/actions/: stream_deck_action.py
streamdeck_ui/actions/brightness/: action.py  action_brightness.ui  brightness.ui  ui_brightness.py
streamdeck_ui/actions/command/: action.py  commandwidget.ui  ui_commandwidget.py
streamdeck_ui/actions/keypress/: action.py  action_keypress.ui  keypress.py  keypress.ui
streamdeck_ui/actions/obs/: action.py  action_obs_scene.ui  obs.ui  ui_obs.py
streamdeck_ui/actions/text/: action.py  text.ui  ui_text.py
streamdeck_ui/cli/: commands.py  server.py
streamdeck_ui/display/: background_color_filter.py  display_grid.py  empty_filter.py  filter.py  image_filter.py  keypress_filter.py  pipeline.py  pulse_filter.py  text_filter.py
streamdeck_ui/fonts/Goblin_One/: OFL.txt
streamdeck_ui/fonts/Pacifico/: OFL.txt
streamdeck_ui/modules/: fonts.py  keyboard.py
streamdeck_ui/modules/utils/: timers.py
tests/: common.py  conftest.py  test_api.py  test_api.py_DEPRECATED  test_config.py  test_dimmer.py  test_filter.py  test_fonts.py  test_gui.py  test_gui.py_DEPRECATED  test_stream_deck_monitor.py
tests/api/: conftest.py  helpers.py  test_button_state.py  test_default_state.py  test_device_state.py  test_pages.py
tests/cli/: test_commands.py
tests/gui/: conftest.py  test_button_actions.py  test_config_backup_dialog.py  test_menu.py  test_page_actions.py  test_switch_page.py
tests/modules/: test_fonts.py  test_keyboard.py
wayland/: README.md
